--- a/style.css
+++ b/style.css
@@ -1,221 +1,348 @@
-* {
+
+#bloc_page
+{
+    width :auto;
     -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     list-style-type: none;
-  }
-  .header
-  {
-      background-color: rgb(196, 23, 23);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
-  .header_title
-  {
-      background-color: rgb(66, 65, 65);
-      height: 100%;
-      align-items: center;
-      margin: 50px 0 50px 50px;
-  }
-  #menu
-  {
-      display: flex;
-      align-items: center;
-      background-color: rgb(5, 2, 7);
-      margin: 50px 50px 50px 0;
-      padding-right: 50px;
-      width: 30%;
-      justify-content: space-between;
-    }
-    .find
-    {
-        background-color: blueviolet;
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        min-width: 20%;
-        height: 200px;
-    }
-    .nav_title
-    {
-        background-color: beige;
-        display: flex;
-        flex-direction: column;
-        margin: 0 50px 0 50px;
-        height: 30%;
-    }
-    #city
-    {
-        background-color: aquamarine;
-        display: flex;
-        margin:0 50px 0 50px;
-        height: 30%;
-        align-items: center;
-    }
-    #filter
-    {
-        background-color: aqua;
-        display: flex;
-        margin: 0 50px 0 50px;
-        height: 30%;
-        align-items: center;
-    }
-    .info
-    {
-        background-color: black;
-        margin: 0 50px 0 50px;
-        height: 10%;
+    margin: 0;
+} 
+.header
+{
+    background-color: rgb(196, 23, 23);
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    width: 100%;
+    height: 10vh;
+}
+.logo
+{
+    display: flex;
+    background-color: black;
+    width: 50%;
+    align-items: flex-start;
+    height: 50%;
+}
+.menu
+{
+    display: flex;
+    flex-flow: row wrap; 
+    background-color: aquamarine;
+    align-content: flex-start;
+    width: 16%;
+    height: 50%;
+    justify-content: flex-end;
+}
+.find
+{
+    background-color: blueviolet;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 100%;
+    height: 35vh;
+    font-size: 1em;
+    line-height: 0.3em;
+}
+.nav_title
+{
+    background-color: beige;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+#city
+{
+    background-color: aquamarine;
+    display: flex;
+    justify-content: flex-start;
+    height: 100%;
+    align-items: center;
+}
+.fa-map
+{
+    background-color: rgb(212, 212, 212);
+    padding: 15px 2px 5px 2px;
+    width: 40px;
+    border-radius: 10px 0 0 10px;
+    display: flex;
+    align-items: center;
+    font-size: 1em;
+}
+#city input
+{
+    width: 220px;
+    padding: 9px;
+    border-color: rgb(212, 212, 212);
+    border-width: 1px 0 1px 0;
+}
+::placeholder
+{
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 1.5em;
+}
+.button
+{
+    width: auto;
+    padding: 10px;
+    background-color: blue;
+    color: white;
+    border-style: none;
+    border-radius: 0px 10px 10px 0px;
+}
+#filter
+{
+    background-color: aqua;
+    display: flex;;
+    height: 30%;
+    align-items: center;
+}
+.item:focus
+{
+background-color: rgb(212, 212, 212) ;
 }
 .list_filter
 {
     display: flex;
-    padding-left: 60px;
-    background-color: blueviolet;
-    justify-content: space-between;
+    background-color: rgb(242, 243, 247);
+    justify-content: space-around;
+    list-style-type: none;
+    width: 50%;
+    height: 100%;
+    align-items: center;
+    font-size: 1em;
 }
 #filter ul
 {
-display: flex;
+    display: flex;
+    list-style-type:none;
+}
+.fa-item
+{
+    background-color: rgb(196, 238, 255);
+    border-radius: 50%;
+    color: blue ;
+    padding: 10px;
+    text-align: center;
+    margin-right: 20px;
+}
+.item
+{
+    border-radius: 30px;
+    border: 1px solid rgb(212, 212, 212);
+    border-width: 1px 1px 1px 0;
+    background-color: white;
+    padding: 10px 10px 10px 0;
+    font-weight: bold;
+}
+.information
+{
+    display: flex;
+    flex-direction: row;
+    background-color: black;
+}
+.info
+    {
+        display: flex;
+        color: aliceblue;
+        padding: 20px;
+        font-size: 0.8em;
+}
+.info-circle
+{
+    color: white;
+    background-color: blue;
+    border-radius: 00%;
+    border: 1px solid rgb(212, 212, 212);
+    width: 1%;
+    height: 10%;
+    padding: 1px 3px 1px 0;
+    display: flex;
+    align-self: center;
+    align-items: center;
+    
 }
 #main
 {
     background-color: blue;
     display: flex;
-}
-#accomodation
-{
-    background-color: aqua;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-}
-.accomodation_title
-{
-    margin-left: 50px;
-    height: 10%;
-}
-#accomodation img
-{
-    width: 200px;
-    height: 160px;
-}
-aside img
-{
-    width: 150px;
-    height: 120px;
+    height: 80vh;
 }
 #accomodation_article
+{
+    background-color: rgb(14, 233, 69);
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+.accomodation_picture img
+{
+object-fit: cover;
+width: 100%;
+height: 100%;
+}
+.accomodation
+{
+    width: 33%;
+}
+.first_serie
+{
+    background-color: rgb(233, 188, 188);
+    display: flex;
+    width: 100%;
+    height: 40%;
+    justify-content: space-between;
+}
+.accomodation_
 {
     display: flex;
     flex-direction: column;
     background-color: brown;
-    margin: 0 50px 0 50px;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    align-items: flex-start;
 }
-.first_serie
+.accomodation_picture
 {
-    display: flex;
-    background-color: bisque;
-    height: 50%;
-    justify-content: space-between;
-
+    height: 60%;
+    width: 96%;
+    align-self: center;
+    padding-top: 7px;
+    border-radius: 40px 40px 0 0;
+    overflow: hidden;
+}
+.accomodation_description
+{
+    height: 40%;
+    font-size: 0.8em;
+    padding-left: 20px ;
+    padding-bottom: 10px;
 }
 .second_serie
 {
     display: flex;
-    background-color: antiquewhite;
-    height: 50%;
+    width: 100%;
+    height: 40%;
     justify-content: space-between;
 }
-aside
+.popular
 {
-    background-color: rgb(18, 121, 211);
-    width: 30%;
-}
-#accomodation p
-{
-    margin-left: 50px;
-    height: 10%;
-}
-aside
-{
+    width: 20%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin-right: 50px;
-
+    height: 80vh;
 }
-#popular_title
+.popular_article
 {
     display: flex;
-    justify-content: space-between;
-    height: 10%;
+    height: 33%;
 }
-#popular_article
-{
-    background-color: bisque;
-    height: 90%;
-    justify-content: space-around;
-}
-.first_popular
+.card
 {
     display: flex;
-    margin: 0 20px 20px 20px;
-    height: 30%;
-}
-.second_popular
-{
-    display: flex;
-    align-self: center;
     background-color: brown;
-    margin: 0 20px 20px 20px;
-    height: 30%;
-    
+    width: 100%;
+    height: 10%;
+    border-radius: 30px;
+    align-items: flex-start;
 }
-.third_popular
+.popular_picture img
 {
-    display: flex;
-    background-color: blueviolet;
-    margin: 0 20px 20px 20px;
-    height: 30%;
+object-fit: cover;
+width: 100%;
+height: 100%;
+background-color: antiquewhite;
+}
+.popular_description
+{
+    height: 100%;
+    font-size: 0.8em;
+    padding-left: 20px ;
+    padding-bottom: 10px;
+    width: 60%;
 }
 #branch
 {
     display: flex;
     flex-direction: column;
     background-color: rgb(247, 183, 105);
+    height: 80vh;
 }
 .panorama
 {
-    display: flex;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50%;
+    grid-template-areas:
+    "vieux_port pomegue calanques notre_dame"
+    "vieux_port frioul calanques longchamp";
+    background-color: black;
 }
-#first
+.activities_picture
 {
-    display: flex;
-    flex-flow: wrap column;
-    background-color: rgb(18, 150, 47);
-    width: 50%;
+    background-color: brown;
+    height: 90%;
 }
-#second
+.activities_picture img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+}
+.vieux_port
 {
-    display: flex;
-    flex-flow: wrap column;
-    background-color: rgb(8, 65, 20);
-    width: 50%;
-    
-}
-.panorama img
+    background-color: blueviolet;
+    grid-area: vieux_port;
+    height: auto;
+} 
+.pomegues
 {
-    height: 500px;
-    width: 390px;
+    background-color: antiquewhite;
+    grid-area: pomegue;
+    height: auto;
 }
-.
+.frioul
+{
+    background-color: brown;
+    grid-area: frioul;
+}
+.calanques
+{
+    grid-area: calanques;
+}
+.notre_dame
+{
+    grid-area: notre_dame;
+}
+.longchamp
+{
+    grid-area: longchamp;
+}
 footer
 {
 display: flex;
-justify-content: space-around;
-height: 200px;
+justify-content: flex-start;
+height: auto%;
+}
+#by_the_way
+{
+    background-color: aqua;
+    width: 33%;
+    align-self: center;
+}
+#products
+{
+    background-color: aqua;
+    width: 33%;
+    align-self: center;
+}#assistance
+{
+    background-color: aqua;
+    width: 33%;
+    align-self: center;
 }
