--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* 1212 base style*/
+/* 2121 border box */
 *{
     margin: 0;
     box-sizing: border-box;
@@ -15,7 +17,9 @@ em{
 }
 /* <body> */
 body{
+    /* 999 flexbox  max height 1400px*/
     font-size: 1em;
+    /* 888 fonts  */
     font-family: 'Raleway', sans-serif;
     display: flex;
     justify-content: center;
@@ -39,7 +43,7 @@ body{
             .inscription{
                 padding: 30px 35px 0 0;
                 font-weight: 700;
-                text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                 float: right;
                 color:#0065FC;
                 text-align: right;
@@ -47,7 +51,7 @@ body{
                 
                 .inscription:hover{
                     font-weight: 900;
-                    text-shadow: 0.1em 0.1em 0.3em rgb(215, 215, 215);
+                    text-shadow: 0.1em 0.1em 0.3em rgba(242, 242, 242, 0.5em);
                     color: #0065FC;
                 }
                 .inscription:active{
@@ -65,7 +69,7 @@ body{
             }
                 .topbar_selection{
                     width: 50%;
-                    text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                    text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                     border-bottom: 0.2em solid #f2f2f2;
                     text-align: center;
                 }
@@ -79,7 +83,7 @@ body{
                     }
                     .topbar_selection:hover{
                         font-weight: 500;
-                        text-shadow: 0.1em 0.1em 0.3em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.3em rgba(242, 242, 242, 0.5em);
                         border-bottom: #0065FC solid 0.1em;
                         color: #0065FC;
                         transition: color .3s;
@@ -102,7 +106,7 @@ body{
             .description{
                 padding: 10px 0 30px 0;
                 line-height: 2em;
-                text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
             }
             .searchbar{
                 width: auto;
@@ -115,7 +119,7 @@ body{
                     flex-wrap: nowrap;
                 }
                     .focus:hover{
-                        box-shadow: 0 0 2em 0.2em rgb(215, 215, 215);
+                        box-shadow: 0 0 2em 0.2em rgba(242, 242, 242, 0.5em);
                     }
                         .hidden {
                             height: 1px;
@@ -130,7 +134,7 @@ body{
                             height: 45px;
                             padding: 10px 15px 17px 17px;
                             font-size: 1.5em;
-                            text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                            text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                             border-radius: 1em 0 0 1em;
                             background-color: #f2f2f2;
                         }
@@ -153,7 +157,7 @@ body{
                                 font-size: 0.9em;
                                 font-weight: 600;
                                 opacity: 0.8;
-                                text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                                text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                                 color: black;
                                 text-align: left;
                             }
@@ -194,7 +198,7 @@ body{
             }
                 .title_list{
                     width: 5%;
-                    text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                    text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                     font-weight: 700;
                     padding-top: 21.5px;
                 }
@@ -219,9 +223,10 @@ body{
                             justify-content: flex-start;
                             align-items: center;
                         }
+                        /* 444 hover */
                             .list_filter .item:hover{
                                 background-color:#f2f2f2;
-                                box-shadow: 0 0 0.6em 0.2em rgb(215, 215, 215);
+                                box-shadow: 0 0 0.6em 0.2em rgba(242, 242, 242, 0.5em);
                             }
                                 .list_filter .choose{
                                     min-height: 37px;
@@ -236,7 +241,7 @@ body{
                                 }
                                     .list_filter .choose:hover{
                                         background-color:#f2f2f2;
-                                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                                         padding: 0 20px;
                                     } 
                                 .fa-item{
@@ -246,7 +251,7 @@ body{
                                     margin-right: -15px;
                                     font-size: 1em;
                                     border-radius: 50%;
-                                    background-color: rgb(196, 238, 255);
+                                    background-color: #deebff;
                                     color:#0065FC;
                                     text-align: center;
                                     display: flex;
@@ -269,9 +274,9 @@ body{
                         height: 15px;
                         padding: 8px;
                         font-size: 0.7em;
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                         border-radius: 50%;
-                        border: 0.1em solid rgb(215, 215, 215);
+                        border: 0.1em solid rgba(242, 242, 242, 0.5em);
                         color: blue;
                         background-color: white;
                         display: flex;
@@ -281,7 +286,7 @@ body{
                         .circle:hover{
                             font-weight: 500;
                             opacity: 1;
-                            text-shadow: 0.1em 0.1em 0.3em rgb(215, 215, 215);
+                            text-shadow: 0.1em 0.1em 0.3em rgba(242, 242, 242, 0.5em);
                         }
                     .info{
                         padding-top: 3px;
@@ -289,21 +294,21 @@ body{
                         font-size: 0.9em;
                         font-weight: 300;
                         opacity: 0.6;
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                         display: flex;
                     }
         /* <section class="main"> */
             /* aside */
             aside{
-                box-shadow: 0 0.1em 0.3em 0.1em rgb(215, 215, 215), 0 -0.1em 0.3em 0.1em rgb(215, 215, 215);
+                box-shadow: 0 0.1em 0.3em 0.1em rgba(242, 242, 242, 0.5em), 0 -0.1em 0.3em 0.1em rgba(242, 242, 242, 0.5em);
                 background-color:#f2f2f2;
             }
                 aside:hover{
-                    box-shadow: 0 0.1em 0.5em 0.3em rgb(215, 215, 215), 0 -0.1em 0.5em 0.3em rgb(215, 215, 215);  
+                    box-shadow: 0 0.1em 0.5em 0.3em rgba(242, 242, 242, 0.5em), 0 -0.1em 0.5em 0.3em rgba(242, 242, 242, 0.5em);  
                 }             
                     .popular_title{
                         padding: 20px;
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                         display: flex;
                         justify-content: space-between;
                     }
@@ -319,13 +324,13 @@ body{
                                 height: 130px;
                                 max-height: 290px;
                                 padding: 3px;
-                                box-shadow: 0 0 0.6em 0.2em rgb(215, 215, 215);
+                                box-shadow: 0 0 0.6em 0.2em rgba(242, 242, 242, 0.5em);
                                 border-radius: 1.5em;
                                 display: flex;
                                 background-color: white;
                             }
                                 .card:hover{
-                                    box-shadow: 0 0 1em 0.2em rgb(215, 215, 215);
+                                    box-shadow: 0 0 1em 0.2em rgba(242, 242, 242, 0.5em);
                                 }                    
                                     .popular_picture{
                                         min-width: 37%;
@@ -346,7 +351,7 @@ body{
                                         padding: 10px 0 10px 20px;
                                         font-size: 0.8em;
                                         line-height: 1.8em;
-                                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                                         display: flex;
                                         flex-direction: column;
                                         justify-content: space-between;
@@ -374,12 +379,12 @@ body{
                 flex-direction: column;
             }
                 article:hover{
-                    box-shadow: 0 0.1em 1em  rgb(215, 215, 215), 0 -0.1em 1em rgb(215, 215, 215);
+                    box-shadow: 0 0.1em 1em  rgba(242, 242, 242, 0.5em), 0 -0.1em 1em rgba(242, 242, 242, 0.5em);
                     background-color: #f2f2f2;
                 }
                     .accomodation_title{
                         padding: 20px;
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                     }
                     .serie{
                         padding: 20px;
@@ -400,7 +405,7 @@ body{
                             flex-wrap: wrap;
                         }
                             .accomodation:hover{
-                                box-shadow: 0 0 1em 0.2em rgb(215, 215, 215);
+                                box-shadow: 0 0 1em 0.2em rgba(242, 242, 242, 0.5em);
                                 }
                                     .accomodation_picture img{
                                         min-width: 100%;
@@ -416,7 +421,7 @@ body{
                                     padding: 10px 20px 0;
                                     font-size: 0.8em;
                                     line-height: 1.5em;
-                                    text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                                    text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                                     display: flex;
                                     justify-content: space-between;
                                     flex-direction: column;
@@ -426,7 +431,7 @@ body{
                         padding: 20px;
                         font-size: 0.8em;
                         font-weight: 600;
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                     }
                         .more:hover{
                             font-weight: 700;
@@ -448,8 +453,9 @@ body{
                     font-size: 0.8em;
                     font-weight: 700;
                     line-height: 2em;
-                    text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                    text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                 }
+                /* 1010 grid be careful ie */
                 .activities_section{
                     padding: 10px 0 40px 0;
                     display: grid;
@@ -470,7 +476,7 @@ body{
                         text-align:  left;
                     }
                         .activities:hover{
-                            box-shadow: 0 0 1em 0.2em rgb(215, 215, 215);
+                            box-shadow: 0 0 1em 0.2em rgba(242, 242, 242, 0.5em);
                         }
                         .vieux_port{
                             grid-area: vieux_port;
@@ -519,21 +525,21 @@ body{
         /* <footer> */
         footer{
             padding:  30px 0 20px 60px;
-            box-shadow: 0 -0.1em 0.2em rgb(215, 215, 215);
+            box-shadow: 0 -0.1em 0.2em rgba(242, 242, 242, 0.5em);
             background-color: #f2f2f2;
             display: flex;
             flex-wrap: wrap;
         
         }
             footer:hover{
-                box-shadow: 0 -0.2em 0.3em rgb(215, 215, 215);
+                box-shadow: 0 -0.2em 0.3em rgba(242, 242, 242, 0.5em);
             }
                 .footer_bar{
                     padding: 0 50px 30px 0;
                 }
                     footer h4{
                         font-size: 1em;
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                         padding-bottom: 20px;
                     }
                         footer h4:hover{
@@ -553,13 +559,14 @@ body{
                             footer a{
                                 line-height: 0.8em;                            
                                 font-size: 0.8em;
-                                text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                                text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                                 color: black;
                                 }
                                     footer a:hover{
                                         font-weight: 400;
                                         text-shadow: 0.1em 0.1em 0.1em #6b6b6b;
                                     }
+/* 666 responsive  */
 /* media */
 @media screen and (min-width: 575px) {
             .searchbar{
@@ -591,12 +598,12 @@ body{
                     background-color: #0065FC;
                 }
                     .fa-search{
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                         display: none;
                     }
                     .click_search{
                         font-weight: 600;
-                        text-shadow: 0.1em 0.1em 0.1em rgb(215, 215, 215);
+                        text-shadow: 0.1em 0.1em 0.1em rgba(242, 242, 242, 0.5em);
                         display: block;
                     }
                         .click_search:hover{
@@ -657,11 +664,11 @@ body{
                         padding: 10px 12px;
                     }
             article{
-                box-shadow: 0 0.1em 0.3em 0.2em rgb(215, 215, 215), 0 -0.1em 0.3em 0.2em rgb(215, 215, 215);
+                box-shadow: 0 0.1em 0.3em 0.2em rgba(242, 242, 242, 0.5em), 0 -0.1em 0.3em 0.2em rgba(242, 242, 242, 0.5em);
                 background-color: #f2f2f2;
             }
                 article:hover{
-                    box-shadow: 0 0.1em 0.6em 0.2em rgb(215, 215, 215), 0 -0.1em 0.6em 0.2em rgb(215, 215, 215);  
+                    box-shadow: 0 0.1em 0.6em 0.2em rgba(242, 242, 242, 0.5em), 0 -0.1em 0.6em 0.2em rgba(242, 242, 242, 0.5em);  
                 }
                     .serie{
                         flex-wrap: nowrap;
@@ -670,7 +677,7 @@ body{
                     }
                         .accomodation{
                             min-width: 32%;
-                            box-shadow: 0 0 0.5em 0.2em rgb(215, 215, 215);
+                            box-shadow: 0 0 0.5em 0.2em rgba(242, 242, 242, 0.5em);
                         }
                         .accomodation_description{
                             padding: 5px 0px 5px 20px;
