--- a/style.css
+++ b/style.css
@@ -677,7 +677,7 @@ body{
                     }
                         .accomodation{
                             min-width: 32%;
-                            box-shadow: 2px 10px 2px rgba(242,242,242,0.);
+                            box-shadow: 2px 10px 2px rgba(242,242,242,0.5);
                         }
                         .accomodation_description{
                             padding: 5px 0px 5px 20px;
